# AI-ML

./: .gitignore  README.md  hello.ipynb  hello.py  pyproject.toml
src/: README.md
src/module-1/: README.md  resources.md
src/module-2/: dist.ipynb  file.py  functions.py  inbuild.py  list.ipynb  main.ipynb  main.py  numpy_basics.py  pandas_basics.py
src/module-3/: 01_data_understanding.ipynb  02_data_cleaning.ipynb  03_visualization_basics.ipynb  README.md
src/module-3/datasets/: README.md  student_lifestyle.csv  student_lifestyle_cleaned.csv
src/module-4/: decision-tree.py  k-mean-clustering.py  knn.py  linear-regression.py  logistic-regression.py  random-forest.py  support-vector-machine.py
src/module-5/: model-evaluation.py
src/module-6/: main.py
src/module-6/dataset/: social-media-labelled.csv  social-media.csv
